--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ tokio = { version = "1.44.2", features = ["time"]}
 dirs = "6.0.0"
 serde_json = "1.0.149"
 serde = { version = "1.0.228", features = ["derive"] }
+anyhow = "1.0.100"
+rfd = "0.17.2"
+thiserror = "2.0.18"
