--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 resolver = "2"
 
 [dependencies]
-iced = {version = "0.14.0", features = ["tokio"]}
+iced = { version = "0.14.0", features = ["tokio", "image"] }
 tokio = { version = "1.44.2", features = ["time"]}
 dirs = "6.0.0"
 serde_json = "1.0.149"
